@@ -3,6 +3,7 @@
   * Can now find span by :text
   * Can now find button by :value
   * Added #forward and #back methods to druid object
+  * Added #right_click and #double_click methods to Element
 === 2016-07-03
 * Enhancements
   * Will call callback method #initialize_page method if it exists on a page object
